eks-modules-setup/deployments/istio-gateway/2-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
        istio: monitor
    spec:
      containers:
      - name: app
        image: aputra/myapp-lesson155:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - name: http
          containerPort: 8080
